syntax = "proto3";

package TorqData;  

message ShowInfo
{
   bytes    strValue    = 2;
   bytes    strName     = 3;
}

message Torque {
   repeated double  fTorque   = 1 [packed=true];
   repeated double  fRpm      = 2 [packed=true];
   repeated int32   dwDelPlus = 3[packed=true];
   repeated ShowInfo tShow    = 4;
   
   int32    dwSeqNo     = 11;
   int32    dwQuality   = 12; 
   int32    dwColInter  = 13;
   //bytes    llColTime   = 14;
   //int32    dwVer       = 15;
   
   bool     bToolBuck   = 21;
   bool     bSingleSTD  = 22;  
   bytes    strMemo     = 23;
   bytes    strRemark   = 24;
   int32    dwTorqUnit  = 25;  
     
   double   fMaxLimit   = 31;  
   double   fControl    = 32;
   double   fShow       = 33;
   double   fOptTorq    = 34;
  
   double   fMaxCir     = 41;
   double   fUpperCir   = 42;
   double   fControlCir = 43;
   double   fLowerCir   = 44;
   
   double   fPlus       = 51;
   double   fMaxRPM     = 52;
   double   fCut        = 53;
   double   fRpmAdj     = 54;
   double   fMulti      = 55;

   fixed64  MUcoltime   = 71;
   int32	dwMUCount   = 72;
   int32    dwMUPlus    = 73;
   double   fMUMaxTorq  = 74;
   double   fMUDuration = 75;
   
   int32    dwOutWellNO = 80;
   fixed64  BOcoltime 	= 81;
   int32	dwBOCount   = 82;
   int32    dwBOPlus    = 83;
   double	fBOMaxTorq  = 84;
   double   fBODuration = 85;
   bytes    strBOJoint  = 86;
}